# herdr-workflow

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
crates/herdr-flow-cli/: Cargo.toml
crates/herdr-flow-cli/src/: main.rs
crates/herdr-flow-core/: Cargo.toml
crates/herdr-flow-core/src/: adversarial_review.rs  artifact.rs  canonical_json.rs  digest.rs  envelope.rs  git.rs  id.rs  lib.rs  m1.rs  pipeline.rs  publication.rs  stage.rs
crates/herdr-flow-store/: Cargo.toml
crates/herdr-flow-store/src/: adapter.rs  artifact.rs  coordinator.rs  git.rs  human.rs  lease.rs  lib.rs  outbox.rs  pipeline.rs  registry.rs  review.rs
crates/herdr-flow-store/tests/: m1_coordinator.rs
docs/: architecture.tldraw  workflow-spec.md
docs/decisions/: 0001-companion-runtime-and-rust.md  0002-atomic-sqlite-journal.md
examples/: README.md
scripts/: check-core-boundary.sh
