[workspace]
members = [
    "crates/herdr-flow-core",
    "crates/herdr-flow-store",
    "crates/herdr-flow-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.97"
repository = "https://github.com/XiaoConstantine/herdr-workflow"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
