[workspace]
members = [
    "crates/herdr-flow-core",
    "crates/herdr-flow-store",
    "crates/herdr-flow-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.97"
repository = "https://github.com/XiaoConstantine/herdr-workflow"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
libc = "0.2"
rusqlite = { version = "0.40", features = ["bundled"] }
ryu-js = "1.0"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "float_roundtrip"] }
sha2 = { version = "0.11", default-features = false }
tempfile = "3.27"
