[package]
name = "herdr-flow-core"
description = "Pure domain types and deterministic workflow logic for Herdr Flow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
ryu-js.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
